--- a/webpack/2020nian02qizaixiankuangjiake/webpack01/src/static/qqq.html
+++ b/webpack/2020nian02qizaixiankuangjiake/webpack01/src/static/qqq.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <title>Document</title>
 </head>
 <body>
-  Hello Word ===>
+  我是qqq文件
 </body>
 </html>
