--- a/node/http/public/index.html
+++ b/node/http/public/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="/public/index.css">
 </head>
 <body>
   <div>ok</div>
-  <script>
-    
-  </script>
+  <!-- 尽量不要采用./的形式 -->
+  <script src="/public/index.js"></script>
 </body>
 </html>
